# cobbled

./: .copier-answers.yaml  .dockerignore  .env.default  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
cobbled/: LICENSE  docker-entrypoint.sh  manage.py  uwsgi.ini
cobbled/app/: actions.py  adapter.py  apps.py  context_processors.py  fitting.py  gaia_lookup.py  iommi_admin.py  urls.py  views.py
cobbled/app/fixtures/: superuser_poshak.json  units.json
cobbled/app/forms/: instrument.py  observation.py  project.py  proposal.py  researcher.py  source.py
cobbled/app/main_menu/: __init__.py  account.py  instrument.py  observation.py  project.py  proposal.py  researcher.py  source.py  validation.py
cobbled/app/management/commands/: makestaff.py
cobbled/app/models/: __init__.py  dataset.py  instrument.py  keplerian_fit.py  observation.py  project.py  proposal.py  researcher.py  source.py  source_gaia_info.py
cobbled/app/models/units/: flux.py  wavelength.py
cobbled/app/pages/: __init__.py  instrument.py  observation.py  project.py  proposal.py  source.py  upload.py  validation.py
cobbled/app/plots/: rv_curve.py  spectrum.py  vpec_vs_gamma.py
cobbled/app/static/: import_bh1.py
cobbled/app/static/css/: custom.css
cobbled/app/static/js/: source_aladin.js
cobbled/app/tables/: instrument.py  observation.py  project.py  proposal.py  researcher.py  source.py
cobbled/core/: settings.py  urls.py  wsgi.py
cobbled/logs/: django.log.1  django.log.2
cobbled/media/demo_data/4787135780363189504/: 4787135780363189504_vpec_vs_gamma.json
cobbled/media/demo_data/4787876988639117056/: 4787876988639117056_vpec_vs_gamma.json
cobbled/media/uploads/: 3152466898179411200_palomar_dbsp_r_1.csv  4787135780363189504_salt_rss_1.csv  4787135780363189504_salt_rss_2.csv  4787135780363189504_salt_rss_3.csv  4787135780363189504_salt_rss_4.csv  4787135780363189504_salt_rss_5.csv  4787135780363189504_salt_rss_6.csv  4787876988639117056_salt_rss_1.csv  4787876988639117056_salt_rss_2.csv  4787876988639117056_salt_rss_3.csv  4787876988639117056_salt_rss_4.csv  4787876988639117056_salt_rss_5.csv  4787876988639117056_salt_rss_6.csv  4787876988639117056_salt_rss_7.csv
cobbled/static/: import_bh1.py
cobbled/templates/account/: account_inactive.html
cobbled/templates/allauth/elements/: button.html  button_group.html  form.html
cobbled/templates/allauth/layouts/: base.html
cobbled/templates/app/: iommi_base.html
cobbled/templates/app/main_menu/: icon.html  spacer.html
cobbled/templates/iommi/main_menu/: menu.html
cobbled/tests/: test_all.py  test_deletion.py  test_fitting.py  test_source.py  test_upload.py
deploy/nginx/: pandora.conf
docs/src/: developer.md
